Milestone-2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RANGE

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LEFT_PARANTHESIS Type RIGHT_PARANTHESIS
Rule 5     TypeName -> TypeToken
Rule 6     TypeName -> QualifiedIdent
Rule 7     TypeToken -> INT_T
Rule 8     TypeToken -> FLOAT_T
Rule 9     TypeToken -> UINT_T
Rule 10    TypeToken -> COMPLEX_T
Rule 11    TypeToken -> RUNE_T
Rule 12    TypeToken -> BOOL_T
Rule 13    TypeToken -> STRING_T
Rule 14    TypeToken -> TYPE IDENTIFIER
Rule 15    TypeLit -> ArrayType
Rule 16    TypeLit -> StructType
Rule 17    TypeLit -> PointerType
Rule 18    TypeOpt -> Type
Rule 19    TypeOpt -> epsilon
Rule 20    ArrayType -> LEFT_BRACKET ArrayLength RIGHT_BRACKET ElementType
Rule 21    ArrayLength -> Expression
Rule 22    ElementType -> Type
Rule 23    StructType -> CreateFuncScope STRUCT LEFT_BRACES FieldDeclRep RIGHT_BRACES EndScope
Rule 24    FieldDeclRep -> FieldDeclRep FieldDecl SEMICOLON
Rule 25    FieldDeclRep -> epsilon
Rule 26    FieldDecl -> IdentifierList Type
Rule 27    TagOpt -> Tag
Rule 28    TagOpt -> epsilon
Rule 29    Tag -> STRING
Rule 30    PointerType -> MULT BaseType
Rule 31    BaseType -> Type
Rule 32    Signature -> Parameters TypeOpt
Rule 33    ResultOpt -> Result
Rule 34    ResultOpt -> epsilon
Rule 35    Result -> Parameters
Rule 36    Result -> Type
Rule 37    Parameters -> LEFT_PARANTHESIS ParameterListOpt RIGHT_PARANTHESIS
Rule 38    ParameterListOpt -> ParametersList
Rule 39    ParameterListOpt -> epsilon
Rule 40    ParametersList -> ParameterDecl
Rule 41    ParametersList -> ParameterDeclCommaRep
Rule 42    ParameterDeclCommaRep -> ParameterDeclCommaRep COMMA ParameterDecl
Rule 43    ParameterDeclCommaRep -> ParameterDecl COMMA ParameterDecl
Rule 44    ParameterDecl -> IdentifierList Type
Rule 45    ParameterDecl -> Type
Rule 46    Block -> LEFT_BRACES StatementList RIGHT_BRACES
Rule 47    StatementList -> StatementRep
Rule 48    StatementRep -> StatementRep Statement SEMICOLON
Rule 49    StatementRep -> epsilon
Rule 50    Declaration -> ConstDecl
Rule 51    Declaration -> TypeDecl
Rule 52    Declaration -> VarDecl
Rule 53    TopLevelDecl -> Declaration
Rule 54    TopLevelDecl -> FunctionDecl
Rule 55    ConstDecl -> CONST ConstSpec
Rule 56    ConstDecl -> CONST LEFT_PARANTHESIS ConstSpecRep RIGHT_PARANTHESIS
Rule 57    ConstSpecRep -> ConstSpecRep ConstSpec SEMICOLON
Rule 58    ConstSpecRep -> epsilon
Rule 59    ConstSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 60    TypeExprListOpt -> TypeOpt ASSIGN ExpressionList
Rule 61    TypeExprListOpt -> epsilon
Rule 62    IdentifierList -> IDENTIFIER IdentifierRep
Rule 63    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 64    IdentifierRep -> epsilon
Rule 65    ExpressionList -> Expression ExpressionRep
Rule 66    ExpressionRep -> ExpressionRep COMMA Expression
Rule 67    ExpressionRep -> epsilon
Rule 68    TypeDecl -> TYPE TypeSpec
Rule 69    TypeDecl -> TYPE LEFT_PARANTHESIS TypeSpecRep RIGHT_PARANTHESIS
Rule 70    TypeSpecRep -> TypeSpecRep TypeSpec SEMICOLON
Rule 71    TypeSpecRep -> epsilon
Rule 72    TypeSpec -> TypeDef
Rule 73    AliasDecl -> IDENTIFIER ASSIGN Type
Rule 74    TypeDef -> IDENTIFIER Type
Rule 75    VarDecl -> VAR VarSpec
Rule 76    VarDecl -> VAR LEFT_PARANTHESIS VarSpecRep RIGHT_PARANTHESIS
Rule 77    VarSpecRep -> VarSpecRep VarSpec SEMICOLON
Rule 78    VarSpecRep -> epsilon
Rule 79    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 80    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 81    ExpressionListOpt -> ASSIGN ExpressionList
Rule 82    ExpressionListOpt -> epsilon
Rule 83    ShortVarDecl -> IDENTIFIER QUICK_ASSIGN Expression
Rule 84    FunctionDecl -> FUNC FunctionName CreateScope Function EndScope
Rule 85    FunctionDecl -> FUNC FunctionName CreateScope Signature EndScope
Rule 86    CreateFuncScope -> <empty>
Rule 87    CreateScope -> <empty>
Rule 88    EndScope -> <empty>
Rule 89    FunctionName -> IDENTIFIER
Rule 90    Function -> Signature FunctionBody
Rule 91    FunctionBody -> Block
Rule 92    Operand -> Literal
Rule 93    Operand -> OperandName
Rule 94    Operand -> LEFT_PARANTHESIS Expression RIGHT_PARANTHESIS
Rule 95    Literal -> BasicLit
Rule 96    BasicLit -> I INTEGER
Rule 97    BasicLit -> I OCTAL
Rule 98    BasicLit -> I HEX
Rule 99    BasicLit -> F FLOAT
Rule 100   BasicLit -> C IMAGINARY
Rule 101   BasicLit -> I RUNE
Rule 102   BasicLit -> S STRING
Rule 103   I -> <empty>
Rule 104   F -> <empty>
Rule 105   C -> <empty>
Rule 106   S -> <empty>
Rule 107   OperandName -> IDENTIFIER
Rule 108   QualifiedIdent -> IDENTIFIER DOT TypeName
Rule 109   PrimaryExpr -> Operand
Rule 110   PrimaryExpr -> PrimaryExpr Selector
Rule 111   PrimaryExpr -> Conversion
Rule 112   PrimaryExpr -> PrimaryExpr LEFT_BRACKET Expression RIGHT_BRACKET
Rule 113   PrimaryExpr -> PrimaryExpr Slice
Rule 114   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 115   PrimaryExpr -> PrimaryExpr LEFT_PARANTHESIS ExpressionListTypeOpt RIGHT_PARANTHESIS
Rule 116   Selector -> DOT IDENTIFIER
Rule 117   Index -> LEFT_BRACKET Expression RIGHT_BRACKET
Rule 118   Slice -> LEFT_BRACKET ExpressionOpt COLON ExpressionOpt RIGHT_BRACKET
Rule 119   Slice -> LEFT_BRACKET ExpressionOpt COLON Expression COLON Expression RIGHT_BRACKET
Rule 120   TypeAssertion -> DOT LEFT_PARANTHESIS Type RIGHT_PARANTHESIS
Rule 121   ExpressionListTypeOpt -> ExpressionList
Rule 122   ExpressionListTypeOpt -> epsilon
Rule 123   Expression -> UnaryExpr
Rule 124   Expression -> Expression BinaryOp Expression
Rule 125   ExpressionOpt -> Expression
Rule 126   ExpressionOpt -> epsilon
Rule 127   UnaryExpr -> PrimaryExpr
Rule 128   UnaryExpr -> UnaryOp UnaryExpr
Rule 129   UnaryExpr -> NOT UnaryExpr
Rule 130   BinaryOp -> LOG_OR
Rule 131   BinaryOp -> LOG_AND
Rule 132   BinaryOp -> RelOp
Rule 133   BinaryOp -> AddMulOp
Rule 134   RelOp -> EQ
Rule 135   RelOp -> NEQ
Rule 136   RelOp -> LT
Rule 137   RelOp -> GT
Rule 138   RelOp -> LEQ
Rule 139   RelOp -> GEQ
Rule 140   AddMulOp -> UnaryOp
Rule 141   AddMulOp -> OR
Rule 142   AddMulOp -> XOR
Rule 143   AddMulOp -> DIV
Rule 144   AddMulOp -> MOD
Rule 145   AddMulOp -> LSHIFT
Rule 146   AddMulOp -> RSHIFT
Rule 147   UnaryOp -> ADD
Rule 148   UnaryOp -> SUB
Rule 149   UnaryOp -> MULT
Rule 150   UnaryOp -> AND
Rule 151   Conversion -> TYPECAST Type LEFT_PARANTHESIS Expression RIGHT_PARANTHESIS
Rule 152   Statement -> Declaration
Rule 153   Statement -> LabeledStmt
Rule 154   Statement -> SimpleStmt
Rule 155   Statement -> ReturnStmt
Rule 156   Statement -> CreateScope Block EndScope
Rule 157   Statement -> BreakStmt
Rule 158   Statement -> ContinueStmt
Rule 159   Statement -> GotoStmt
Rule 160   Statement -> Block
Rule 161   Statement -> IfStmt
Rule 162   Statement -> SwitchStmt
Rule 163   Statement -> ForStmt
Rule 164   SimpleStmt -> epsilon
Rule 165   SimpleStmt -> ExpressionStmt
Rule 166   SimpleStmt -> IncDecStmt
Rule 167   SimpleStmt -> Assignment
Rule 168   SimpleStmt -> ShortVarDecl
Rule 169   LabeledStmt -> Label COLON Statement
Rule 170   Label -> IDENTIFIER
Rule 171   ExpressionStmt -> Expression
Rule 172   IncDecStmt -> Expression INC
Rule 173   IncDecStmt -> Expression DEC
Rule 174   Assignment -> ExpressionList assign_op ExpressionList
Rule 175   assign_op -> AssignOp
Rule 176   AssignOp -> PLUS_ASSIGN
Rule 177   AssignOp -> MINUS_ASSIGN
Rule 178   AssignOp -> MULT_ASSIGN
Rule 179   AssignOp -> DIV_ASSIGN
Rule 180   AssignOp -> MOD_ASSIGN
Rule 181   AssignOp -> AND_ASSIGN
Rule 182   AssignOp -> OR_ASSIGN
Rule 183   AssignOp -> XOR_ASSIGN
Rule 184   AssignOp -> LSHIFT_ASSIGN
Rule 185   AssignOp -> RSHIFT_ASSIGN
Rule 186   AssignOp -> ASSIGN
Rule 187   IfStmt -> IF Expression CreateScope Block EndScope ElseOpt
Rule 188   SimpleStmtOpt -> SimpleStmt SEMICOLON
Rule 189   SimpleStmtOpt -> epsilon
Rule 190   ElseOpt -> ELSE IfStmt
Rule 191   ElseOpt -> ELSE CreateScope Block EndScope
Rule 192   ElseOpt -> epsilon
Rule 193   SwitchStmt -> ExprSwitchStmt
Rule 194   SwitchStmt -> TypeSwitchStmt
Rule 195   ExprSwitchStmt -> SWITCH ExpressionOpt LEFT_BRACES ExprCaseClauseRep RIGHT_BRACES
Rule 196   StartSwitch -> <empty>
Rule 197   ExprCaseClauseRep -> ExprCaseClauseRep ExprCaseClause
Rule 198   ExprCaseClauseRep -> epsilon
Rule 199   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 200   ExprSwitchCase -> CASE ExpressionList
Rule 201   ExprSwitchCase -> DEFAULT
Rule 202   TypeSwitchStmt -> SWITCH SimpleStmtOpt TypeSwitchGuard LEFT_BRACES TypeCaseClauseOpt RIGHT_BRACES
Rule 203   TypeSwitchGuard -> IdentifierOpt PrimaryExpr DOT LEFT_PARANTHESIS TYPE RIGHT_PARANTHESIS
Rule 204   IdentifierOpt -> IDENTIFIER QUICK_ASSIGN
Rule 205   IdentifierOpt -> epsilon
Rule 206   TypeCaseClauseOpt -> TypeCaseClauseOpt TypeCaseClause
Rule 207   TypeCaseClauseOpt -> epsilon
Rule 208   TypeCaseClause -> TypeSwitchCase COLON StatementList
Rule 209   TypeSwitchCase -> CASE TypeList
Rule 210   TypeSwitchCase -> DEFAULT
Rule 211   TypeList -> Type TypeRep
Rule 212   TypeRep -> TypeRep COMMA Type
Rule 213   TypeRep -> epsilon
Rule 214   ForStmt -> FOR CreateScope ConditionBlockOpt Block EndScope
Rule 215   ConditionBlockOpt -> epsilon
Rule 216   ConditionBlockOpt -> Condition
Rule 217   ConditionBlockOpt -> ForClause
Rule 218   Condition -> Expression
Rule 219   ForClause -> SimpleStmt SEMICOLON ConditionOpt SEMICOLON SimpleStmt
Rule 220   ConditionOpt -> epsilon
Rule 221   ConditionOpt -> Condition
Rule 222   ExpressionIdentListOpt -> epsilon
Rule 223   ExpressionIdentListOpt -> ExpressionIdentifier
Rule 224   ExpressionIdentifier -> ExpressionList ASSIGN
Rule 225   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 226   ExpressionListPureOpt -> ExpressionList
Rule 227   ExpressionListPureOpt -> epsilon
Rule 228   BreakStmt -> BREAK LabelOpt
Rule 229   ContinueStmt -> CONTINUE LabelOpt
Rule 230   LabelOpt -> Label
Rule 231   LabelOpt -> epsilon
Rule 232   GotoStmt -> GOTO Label
Rule 233   SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
Rule 234   ImportDeclRep -> epsilon
Rule 235   ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON
Rule 236   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON
Rule 237   TopLevelDeclRep -> epsilon
Rule 238   PackageClause -> PACKAGE PackageName
Rule 239   PackageName -> IDENTIFIER
Rule 240   ImportDecl -> IMPORT ImportSpec
Rule 241   ImportDecl -> IMPORT LEFT_PARANTHESIS ImportSpecRep RIGHT_PARANTHESIS
Rule 242   ImportSpecRep -> ImportSpecRep ImportSpec SEMICOLON
Rule 243   ImportSpecRep -> epsilon
Rule 244   ImportSpec -> PackageNameDotOpt ImportPath
Rule 245   PackageNameDotOpt -> DOT
Rule 246   PackageNameDotOpt -> PackageName
Rule 247   PackageNameDotOpt -> epsilon
Rule 248   ImportPath -> STRING
Rule 249   epsilon -> <empty>

Terminals, with rules where they appear

ADD                  : 147
AND                  : 150
AND_ASSIGN           : 181
ASSIGN               : 59 60 73 80 81 186 224
BOOL_T               : 12
BREAK                : 228
CASE                 : 200 209
COLON                : 118 119 119 169 199 208
COMMA                : 42 43 63 66 212
COMPLEX_T            : 10
CONST                : 55 56
CONTINUE             : 229
DEC                  : 173
DEFAULT              : 201 210
DIV                  : 143
DIV_ASSIGN           : 179
DOT                  : 108 116 120 203 245
ELSE                 : 190 191
EQ                   : 134
FLOAT                : 99
FLOAT_T              : 8
FOR                  : 214
FUNC                 : 84 85
GEQ                  : 139
GOTO                 : 232
GT                   : 137
HEX                  : 98
IDENTIFIER           : 14 62 63 73 74 83 89 107 108 116 170 204 239
IF                   : 187
IMAGINARY            : 100
IMPORT               : 240 241
INC                  : 172
INTEGER              : 96
INT_T                : 7
LEFT_BRACES          : 23 46 195 202
LEFT_BRACKET         : 20 112 117 118 119
LEFT_PARANTHESIS     : 4 37 56 69 76 94 115 120 151 203 241
LEQ                  : 138
LOG_AND              : 131
LOG_OR               : 130
LSHIFT               : 145
LSHIFT_ASSIGN        : 184
LT                   : 136
MINUS_ASSIGN         : 177
MOD                  : 144
MOD_ASSIGN           : 180
MULT                 : 30 149
MULT_ASSIGN          : 178
NEQ                  : 135
NOT                  : 129
OCTAL                : 97
OR                   : 141
OR_ASSIGN            : 182
PACKAGE              : 238
PLUS_ASSIGN          : 176
QUICK_ASSIGN         : 83 204
RANGE                : 
RETURN               : 225
RIGHT_BRACES         : 23 46 195 202
RIGHT_BRACKET        : 20 112 117 118 119
RIGHT_PARANTHESIS    : 4 37 56 69 76 94 115 120 151 203 241
RSHIFT               : 146
RSHIFT_ASSIGN        : 185
RUNE                 : 101
RUNE_T               : 11
SEMICOLON            : 24 48 57 70 77 188 219 219 233 235 236 242
STRING               : 29 102 248
STRING_T             : 13
STRUCT               : 23
SUB                  : 148
SWITCH               : 195 202
TYPE                 : 14 68 69 203
TYPECAST             : 151
UINT_T               : 9
VAR                  : 75 76
XOR                  : 142
XOR_ASSIGN           : 183
error                : 

Nonterminals, with rules where they appear

AddMulOp             : 133
AliasDecl            : 
ArrayLength          : 20
ArrayType            : 15
AssignOp             : 175
Assignment           : 167
BaseType             : 30
BasicLit             : 95
BinaryOp             : 124
Block                : 91 156 160 187 191 214
BreakStmt            : 157
C                    : 100
Condition            : 216 221
ConditionBlockOpt    : 214
ConditionOpt         : 219
ConstDecl            : 50
ConstSpec            : 55 57
ConstSpecRep         : 56 57
ContinueStmt         : 158
Conversion           : 111
CreateFuncScope      : 23
CreateScope          : 84 85 156 187 191 214
Declaration          : 53 152
ElementType          : 20
ElseOpt              : 187
EndScope             : 23 84 85 156 187 191 214
ExprCaseClause       : 197
ExprCaseClauseRep    : 195 197
ExprSwitchCase       : 199
ExprSwitchStmt       : 193
Expression           : 21 65 66 83 94 112 117 119 119 124 124 125 151 171 172 173 187 218
ExpressionIdentListOpt : 
ExpressionIdentifier : 223
ExpressionList       : 59 60 80 81 121 174 174 200 224 226
ExpressionListOpt    : 79
ExpressionListPureOpt : 225
ExpressionListTypeOpt : 115
ExpressionOpt        : 118 118 119 195
ExpressionRep        : 65 66
ExpressionStmt       : 165
F                    : 99
FieldDecl            : 24
FieldDeclRep         : 23 24
ForClause            : 217
ForStmt              : 163
Function             : 84
FunctionBody         : 90
FunctionDecl         : 54
FunctionName         : 84 85
GotoStmt             : 159
I                    : 96 97 98 101
IdentifierList       : 26 44 59 79 80
IdentifierOpt        : 203
IdentifierRep        : 62 63
IfStmt               : 161 190
ImportDecl           : 235
ImportDeclRep        : 233 235
ImportPath           : 244
ImportSpec           : 240 242
ImportSpecRep        : 241 242
IncDecStmt           : 166
Index                : 
Label                : 169 230 232
LabelOpt             : 228 229
LabeledStmt          : 153
Literal              : 92
Operand              : 109
OperandName          : 93
PackageClause        : 233
PackageName          : 238 246
PackageNameDotOpt    : 244
ParameterDecl        : 40 42 43 43
ParameterDeclCommaRep : 41 42
ParameterListOpt     : 37
Parameters           : 32 35
ParametersList       : 38
PointerType          : 17
PrimaryExpr          : 110 112 113 114 115 127 203
QualifiedIdent       : 6
RelOp                : 132
Result               : 33
ResultOpt            : 
ReturnStmt           : 155
S                    : 102
Selector             : 110
ShortVarDecl         : 168
Signature            : 85 90
SimpleStmt           : 154 188 219 219
SimpleStmtOpt        : 202
Slice                : 113
SourceFile           : 1
StartSwitch          : 
Statement            : 48 169
StatementList        : 46 199 208
StatementRep         : 47 48
StructType           : 16
SwitchStmt           : 162
Tag                  : 27
TagOpt               : 
TopLevelDecl         : 236
TopLevelDeclRep      : 233 236
Type                 : 4 18 22 26 31 36 44 45 59 73 74 79 120 151 211 212
TypeAssertion        : 114
TypeCaseClause       : 206
TypeCaseClauseOpt    : 202 206
TypeDecl             : 51
TypeDef              : 72
TypeExprListOpt      : 
TypeList             : 209
TypeLit              : 3
TypeName             : 2 108
TypeOpt              : 32 60
TypeRep              : 211 212
TypeSpec             : 68 70
TypeSpecRep          : 69 70
TypeSwitchCase       : 208
TypeSwitchGuard      : 202
TypeSwitchStmt       : 194
TypeToken            : 5
UnaryExpr            : 123 128 129
UnaryOp              : 128 140
VarDecl              : 52
VarSpec              : 75 77
VarSpecRep           : 76 77
assign_op            : 174
epsilon              : 19 25 28 34 39 49 58 61 64 67 71 78 82 122 126 164 189 192 198 205 207 213 215 220 222 227 231 234 237 243 247
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (233) SourceFile -> . PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
    (238) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 4

    start                          shift and go to state 1
    SourceFile                     shift and go to state 2
    PackageClause                  shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 3

    (233) SourceFile -> PackageClause . SEMICOLON ImportDeclRep TopLevelDeclRep

    SEMICOLON       shift and go to state 5


state 4

    (238) PackageClause -> PACKAGE . PackageName
    (239) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 5

    (233) SourceFile -> PackageClause SEMICOLON . ImportDeclRep TopLevelDeclRep
    (234) ImportDeclRep -> . epsilon
    (235) ImportDeclRep -> . ImportDeclRep ImportDecl SEMICOLON
    (249) epsilon -> .

    IMPORT          reduce using rule 249 (epsilon -> .)
    FUNC            reduce using rule 249 (epsilon -> .)
    CONST           reduce using rule 249 (epsilon -> .)
    TYPE            reduce using rule 249 (epsilon -> .)
    VAR             reduce using rule 249 (epsilon -> .)
    $end            reduce using rule 249 (epsilon -> .)

    ImportDeclRep                  shift and go to state 8
    epsilon                        shift and go to state 9

state 6

    (238) PackageClause -> PACKAGE PackageName .

    SEMICOLON       reduce using rule 238 (PackageClause -> PACKAGE PackageName .)


state 7

    (239) PackageName -> IDENTIFIER .

    SEMICOLON       reduce using rule 239 (PackageName -> IDENTIFIER .)
    STRING          reduce using rule 239 (PackageName -> IDENTIFIER .)


state 8

    (233) SourceFile -> PackageClause SEMICOLON ImportDeclRep . TopLevelDeclRep
    (235) ImportDeclRep -> ImportDeclRep . ImportDecl SEMICOLON
    (236) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl SEMICOLON
    (237) TopLevelDeclRep -> . epsilon
    (240) ImportDecl -> . IMPORT ImportSpec
    (241) ImportDecl -> . IMPORT LEFT_PARANTHESIS ImportSpecRep RIGHT_PARANTHESIS
    (249) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 249 (epsilon -> .)
    CONST           reduce using rule 249 (epsilon -> .)
    TYPE            reduce using rule 249 (epsilon -> .)
    VAR             reduce using rule 249 (epsilon -> .)
    $end            reduce using rule 249 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 10
    ImportDecl                     shift and go to state 11
    epsilon                        shift and go to state 12

state 9

    (234) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 234 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 234 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 234 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 234 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 234 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 234 (ImportDeclRep -> epsilon .)


state 10

    (233) SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .
    (236) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl SEMICOLON
    (53) TopLevelDecl -> . Declaration
    (54) TopLevelDecl -> . FunctionDecl
    (50) Declaration -> . ConstDecl
    (51) Declaration -> . TypeDecl
    (52) Declaration -> . VarDecl
    (84) FunctionDecl -> . FUNC FunctionName CreateScope Function EndScope
    (85) FunctionDecl -> . FUNC FunctionName CreateScope Signature EndScope
    (55) ConstDecl -> . CONST ConstSpec
    (56) ConstDecl -> . CONST LEFT_PARANTHESIS ConstSpecRep RIGHT_PARANTHESIS
    (68) TypeDecl -> . TYPE TypeSpec
    (69) TypeDecl -> . TYPE LEFT_PARANTHESIS TypeSpecRep RIGHT_PARANTHESIS
    (75) VarDecl -> . VAR VarSpec
    (76) VarDecl -> . VAR LEFT_PARANTHESIS VarSpecRep RIGHT_PARANTHESIS

    $end            reduce using rule 233 (SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 20
    CONST           shift and go to state 21
    TYPE            shift and go to state 22
    VAR             shift and go to state 23

    TopLevelDecl                   shift and go to state 14
    Declaration                    shift and go to state 15
    FunctionDecl                   shift and go to state 16
    ConstDecl                      shift and go to state 17
    TypeDecl                       shift and go to state 18
    VarDecl                        shift and go to state 19

state 11

    (235) ImportDeclRep -> ImportDeclRep ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 24


state 12

    (237) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 237 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 237 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 237 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 237 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 237 (TopLevelDeclRep -> epsilon .)


state 13

    (240) ImportDecl -> IMPORT . ImportSpec
    (241) ImportDecl -> IMPORT . LEFT_PARANTHESIS ImportSpecRep RIGHT_PARANTHESIS
    (244) ImportSpec -> . PackageNameDotOpt ImportPath
    (245) PackageNameDotOpt -> . DOT
    (246) PackageNameDotOpt -> . PackageName
    (247) PackageNameDotOpt -> . epsilon
    (239) PackageName -> . IDENTIFIER
    (249) epsilon -> .

    LEFT_PARANTHESIS shift and go to state 26
    DOT             shift and go to state 28
    IDENTIFIER      shift and go to state 7
    STRING          reduce using rule 249 (epsilon -> .)

    ImportSpec                     shift and go to state 25
    PackageNameDotOpt              shift and go to state 27
    PackageName                    shift and go to state 29
    epsilon                        shift and go to state 30

state 14

    (236) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 31


state 15

    (53) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 53 (TopLevelDecl -> Declaration .)


state 16

    (54) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 54 (TopLevelDecl -> FunctionDecl .)


state 17

    (50) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 50 (Declaration -> ConstDecl .)


state 18

    (51) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 51 (Declaration -> TypeDecl .)


state 19

    (52) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 52 (Declaration -> VarDecl .)


state 20

    (84) FunctionDecl -> FUNC . FunctionName CreateScope Function EndScope
    (85) FunctionDecl -> FUNC . FunctionName CreateScope Signature EndScope
    (89) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 33

    FunctionName                   shift and go to state 32

state 21

    (55) ConstDecl -> CONST . ConstSpec
    (56) ConstDecl -> CONST . LEFT_PARANTHESIS ConstSpecRep RIGHT_PARANTHESIS
    (59) ConstSpec -> . IdentifierList Type ASSIGN ExpressionList
    (62) IdentifierList -> . IDENTIFIER IdentifierRep

    LEFT_PARANTHESIS shift and go to state 35
    IDENTIFIER      shift and go to state 37

    ConstSpec                      shift and go to state 34
    IdentifierList                 shift and go to state 36

state 22

    (68) TypeDecl -> TYPE . TypeSpec
    (69) TypeDecl -> TYPE . LEFT_PARANTHESIS TypeSpecRep RIGHT_PARANTHESIS
    (72) TypeSpec -> . TypeDef
    (74) TypeDef -> . IDENTIFIER Type

    LEFT_PARANTHESIS shift and go to state 39
    IDENTIFIER      shift and go to state 41

    TypeSpec                       shift and go to state 38
    TypeDef                        shift and go to state 40

state 23

    (75) VarDecl -> VAR . VarSpec
    (76) VarDecl -> VAR . LEFT_PARANTHESIS VarSpecRep RIGHT_PARANTHESIS
    (79) VarSpec -> . IdentifierList Type ExpressionListOpt
    (80) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (62) IdentifierList -> . IDENTIFIER IdentifierRep

    LEFT_PARANTHESIS shift and go to state 43
    IDENTIFIER      shift and go to state 37

    VarSpec                        shift and go to state 42
    IdentifierList                 shift and go to state 44

state 24

    (235) ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .

    IMPORT          reduce using rule 235 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    FUNC            reduce using rule 235 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    CONST           reduce using rule 235 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    TYPE            reduce using rule 235 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    VAR             reduce using rule 235 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    $end            reduce using rule 235 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)


state 25

    (240) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 240 (ImportDecl -> IMPORT ImportSpec .)


state 26

    (241) ImportDecl -> IMPORT LEFT_PARANTHESIS . ImportSpecRep RIGHT_PARANTHESIS
    (242) ImportSpecRep -> . ImportSpecRep ImportSpec SEMICOLON
    (243) ImportSpecRep -> . epsilon
    (249) epsilon -> .

    RIGHT_PARANTHESIS reduce using rule 249 (epsilon -> .)
    DOT             reduce using rule 249 (epsilon -> .)
    IDENTIFIER      reduce using rule 249 (epsilon -> .)
    STRING          reduce using rule 249 (epsilon -> .)

    ImportSpecRep                  shift and go to state 45
    epsilon                        shift and go to state 46

state 27

    (244) ImportSpec -> PackageNameDotOpt . ImportPath
    (248) ImportPath -> . STRING

    STRING          shift and go to state 48

    ImportPath                     shift and go to state 47

state 28

    (245) PackageNameDotOpt -> DOT .

    STRING          reduce using rule 245 (PackageNameDotOpt -> DOT .)


state 29

    (246) PackageNameDotOpt -> PackageName .

    STRING          reduce using rule 246 (PackageNameDotOpt -> PackageName .)


state 30

    (247) PackageNameDotOpt -> epsilon .

    STRING          reduce using rule 247 (PackageNameDotOpt -> epsilon .)


state 31

    (236) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 236 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    CONST           reduce using rule 236 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 236 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 236 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)
    $end            reduce using rule 236 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON .)


state 32

    (84) FunctionDecl -> FUNC FunctionName . CreateScope Function EndScope
    (85) FunctionDecl -> FUNC FunctionName . CreateScope Signature EndScope
    (87) CreateScope -> .

    LEFT_PARANTHESIS reduce using rule 87 (CreateScope -> .)

    CreateScope                    shift and go to state 49

state 33

    (89) FunctionName -> IDENTIFIER .

    LEFT_PARANTHESIS reduce using rule 89 (FunctionName -> IDENTIFIER .)


state 34

    (55) ConstDecl -> CONST ConstSpec .

    SEMICOLON       reduce using rule 55 (ConstDecl -> CONST ConstSpec .)


state 35

    (56) ConstDecl -> CONST LEFT_PARANTHESIS . ConstSpecRep RIGHT_PARANTHESIS
    (57) ConstSpecRep -> . ConstSpecRep ConstSpec SEMICOLON
    (58) ConstSpecRep -> . epsilon
    (249) epsilon -> .

    RIGHT_PARANTHESIS reduce using rule 249 (epsilon -> .)
    IDENTIFIER      reduce using rule 249 (epsilon -> .)

    ConstSpecRep                   shift and go to state 50
    epsilon                        shift and go to state 51

state 36
